# mobilesam-segmentation-model-service

./: Dockerfile  README.md  pyproject.toml  sam.py
src/mobilesam_segmentation/: __main__.py  app.py  models.py  routes.py  tools.py
src/mobilesam_segmentation_model_service/: __main__.py  app.py  main.py  models.py  routes.py  sam.py
tests/: test_models.py  test_routes.py  test_tools.py
